apps/dev/prow/release/wip-http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prow
  namespace: apps
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: apps
  hostnames:
    - "${DOMAIN_NAME}"
  rules:
    - backendRefs:
        - name: prow-deck
          port: 8080
    - matches:
        - path:
            value: /hook
      backendRefs:
        - name: prow-hook
          port: 8080
    - matches:
        - path:
            value: /tichi
      backendRefs:
        - name: prow-ti-community-owners
          port: 8080
    - matches:
        - path:
            value: /ti-community-owners
      backendRefs:
        - name: prow-hook
          port: 8080
